--- a/index.html
+++ b/index.html
@@ -5,9 +5,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  
+
   <body>
+    <div class="main-header">
+      <h1>Rock Paper Scissors</h1>
+    </div>
+
+    <div class="score">0 - 0</div>
+    <div id="score-desc">You won! Rock beats Scissors</div>
+
+    <div class="choices">
+      <div class="choice-desc">
+        <button onclick="choice()">
+          <img class="image-choice" src="images/rock.png" alt="Rock" />
+        </button>
+        <div>Rock</div>
+      </div>
+
+      <div class="choice-desc">
+        <button onclick="choice()">
+          <img class="image-choice" src="images/paper.png" alt="Paper" />
+        </button>
+        <div>Paper</div>
+      </div>
+
+      <div class="choice-desc">
+        <button onclick="choice()">
+          <img class="image-choice" src="images/scissors.png" alt="Scissors" />
+        </button>
+        <div>Scissors</div>
+      </div>
+    </div>
+
+    <table>
+      <tr>
+        <th>Player</th>
+        <th>Computer</th>
+      </tr>
+      <tr>
+        <td>Rock</td>
+        <td>Rock</td>
+      </tr>
+    </table>
+
     <script src="script.js"></script>
   </body>
 </html>
